--- a/webapp/h5walletNew/index.html
+++ b/webapp/h5walletNew/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 		<title>全时钱包</title>
-		<link rel="shortcut icon" href="./images/favicon.ico" /> 
+		<link rel="shortcut icon" href="./h5images/favicon.ico" /> 
 		<!-- <link rel="stylesheet" type="text/css" href="css/style.css"> -->
 		<link rel="stylesheet" type="text/css" href="build/css/common.min.css">
 		<link rel="stylesheet" type="text/css" href="css/base.css">
