--- a/webapp/index.html
+++ b/webapp/index.html
@@ -26,7 +26,7 @@
 	<meta http-equiv="Pragma" content="no-cache">
 	<!--web app 应用下状态(屏幕顶部条)的颜色,默认值为 default(白色) -->
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="shortcut icon" href="./build/login/favicon.ico" /> 
+    <link rel="shortcut icon" href="favicon.ico" /> 
     <link rel="stylesheet" type="text/css" href="./build/css/common.min.css">
     <!-- <link rel="stylesheet" type="text/css" href="./css/glDatePicker.darkneon.css">
     <link rel="stylesheet" type="text/css" href="./css/glDatePicker.default.css">
